add_executable(test_utils test_utils.cpp)
target_compile_options(test_utils PRIVATE -Wall -Wextra -Wpedantic -Werror)
if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  target_compile_options(test_utils PRIVATE -Wnrvo)
endif()
target_compile_options(test_utils PRIVATE $<$<CONFIG:Debug>:-fsanitize=address;-fsanitize=undefined>)
target_link_options(test_utils PRIVATE $<$<CONFIG:Debug>:-fsanitize=address;-fsanitize=undefined>)
target_link_libraries(test_utils PRIVATE GTest::GTest GTest::Main)
gtest_discover_tests(test_utils)
